--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dockerfile-template",
   "version": "0.0.1",
   "description": "Format for preprocessing dockerfiles",
-  "main": "lib.coffee",
+  "main": "lib.js",
   "bin": "./dockerfile-template",
   "repository": {
     "type": "git",
@@ -11,9 +11,9 @@
   "author": "Aleksis Brezas <abresas@resin.io>",
   "license": "Apache-2.0",
   "scripts": {
-    "pretest": "./node_modules/.bin/coffeelint lib.coffee dockerfile-template.coffee ./test",
-    "test": "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
-    "prepublish": "./node_modules/.bin/coffee -c lib.coffee dockerfile-template.coffee && (echo '#!/usr/bin/env node' | cat - dockerfile-template.js > dockerfile-template)"
+    "pretest": "coffeelint lib.coffee dockerfile-template.coffee ./test",
+    "test": "mocha --compilers coffee:coffee-script/register",
+    "prepublish": "gulp && (echo '#!/usr/bin/env node' | cat - dockerfile-template.js > dockerfile-template)"
   },
   "dependencies": {
     "bluebird": "^2.10.1",
@@ -25,6 +25,9 @@
     "chai": "^3.3.0",
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.12.1",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.3",
+    "gulp-util": "^3.0.8",
     "mocha": "^2.3.3"
   }
 }
