--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "author": "Aleksis Brezas <abresas@resin.io>",
   "license": "Apache-2.0",
   "scripts": {
-    "pretest": "coffeelint lib.coffee dockerfile-template.coffee ./test",
+    "pretest": "balena-lint lib.coffee dockerfile-template.coffee ./test",
     "test": "mocha --compilers coffee:coffee-script/register",
     "prepublish": "gulp && (echo '#!/usr/bin/env node' | cat - dockerfile-template.js > dockerfile-template)"
   },
   "dependencies": {
-    "bluebird": "^3.5.3",
-    "commander": "^2.8.1",
-    "errno": "^0.1.4",
-    "lodash.template": "~3.6.2"
+    "bluebird": "^3.7.2",
+    "commander": "^2.20.3",
+    "errno": "^0.1.8",
+    "lodash.template": "^4.5.0"
   },
   "devDependencies": {
-    "chai": "^3.3.0",
+    "@balena/lint": "^5.4.2",
+    "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
-    "coffeelint": "^1.12.1",
-    "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.3",
+    "gulp": "^4.0.2",
+    "gulp-coffee": "^2.3.5",
     "gulp-util": "^3.0.8",
-    "mocha": "^2.3.3"
+    "mocha": "^2.5.3"
   }
 }
